--- a/ios/resiQu.xcodeproj/xcshareddata/xcschemes/resiQu.xcscheme
+++ b/ios/resiQu.xcodeproj/xcshareddata/xcschemes/resiQu.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "CekResi.app"
-               BlueprintName = "CekResi"
-               ReferencedContainer = "container:CekResi.xcodeproj">
+               BuildableName = "resiQu.app"
+               BlueprintName = "resiQu"
+               ReferencedContainer = "container:resiQu.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CekResiTests.xctest"
-               BlueprintName = "CekResiTests"
-               ReferencedContainer = "container:CekResi.xcodeproj">
+               BuildableName = "resiQuTests.xctest"
+               BlueprintName = "resiQuTests"
+               ReferencedContainer = "container:resiQu.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CekResiTests.xctest"
-               BlueprintName = "CekResiTests"
-               ReferencedContainer = "container:CekResi.xcodeproj">
+               BuildableName = "resiQuTests.xctest"
+               BlueprintName = "resiQuTests"
+               ReferencedContainer = "container:resiQu.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CekResi.app"
-            BlueprintName = "CekResi"
-            ReferencedContainer = "container:CekResi.xcodeproj">
+            BuildableName = "resiQu.app"
+            BlueprintName = "resiQu"
+            ReferencedContainer = "container:resiQu.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CekResi.app"
-            BlueprintName = "CekResi"
-            ReferencedContainer = "container:CekResi.xcodeproj">
+            BuildableName = "resiQu.app"
+            BlueprintName = "resiQu"
+            ReferencedContainer = "container:resiQu.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CekResi.app"
-            BlueprintName = "CekResi"
-            ReferencedContainer = "container:CekResi.xcodeproj">
+            BuildableName = "resiQu.app"
+            BlueprintName = "resiQu"
+            ReferencedContainer = "container:resiQu.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
