--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-admob": "file:local_modules/react-native-admob",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-grid-list": "^1.0.9",
     "react-native-linear-gradient": "^2.5.4",
